--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "modernizr": "^3.3.1",
+    "fastclick": "^1.0.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
